fix content jumping when vertical scrollbar appears/disappears (#1057)
* fix content jumping when vertical scrollbar appears/disappears

* change the jump fix to be solved by always showing the vertical scroll bar on devices with physical mouse attached

--- a/blueocean-dashboard/src/main/less/core.less
+++ b/blueocean-dashboard/src/main/less/core.less
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 #modal-snap-background {
     position: fixed;
     top: 0;
